[gd_scene load_steps=5 format=2]

[ext_resource path="res://character_beige_front.png" type="Texture" id=1]
[ext_resource path="res://NPC.gd" type="Script" id=2]
[ext_resource path="res://DialogueUI.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 255.0

[node name="NPC" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 37 )
shape = SubResource( 1 )

[node name="DialogueUI" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
[connection signal="ready" from="." to="." method="_on_NPC_ready"]
